新增用户属性统计

--- a/html/index.html
+++ b/html/index.html
@@ -124,7 +124,7 @@
                                 <li class="nav-item start">
                                     <a href="userProperty.html" class="nav-link ">
                                     <i class="iconfont icon-shuxing" style="font-size: 20px;"></i>
-                                    <span class="title">访客属性统计</span>
+                                    <span class="title">上网用户属性统计</span>
                                 </a>
                                 </li>
                             </ul>
@@ -285,8 +285,8 @@
         // 提示
         $("#time_explain").tooltip({
             html: true,
-            title: '实时客流：当前访客人数（每隔10秒更新一次）' + '<br/>' +
-                '累计客流：今日累计访客人数（每隔10秒更新一次）'
+            title: '实时客流：当前访客人数' + '<br/>' +
+                '累计客流：今日累计访客人数'
         })
         $("#history_explain").tooltip({
             html: true,
