--- a/html/index.html
+++ b/html/index.html
@@ -587,7 +587,7 @@
             data3.shift();
             data2.push({
                 name: moment().format("HH:mm:ss"),
-                value: [moment().format("YYYY/MM/DD HH:mm:ss"), RandomNumBoth(180, 200)]
+                value: [moment().format("YYYY/MM/DD HH:mm:ss"), 100]
             });
             totalUsers = getTotalUsersRandom(totalUsers);
             data3.push({
